--- a/toDo.txt
+++ b/toDo.txt
@@ -1,6 +1,6 @@
 -------------O QUE AINDA PRECISA SER FEITO----------------
 
-// Só criar conta se o usuário existir
+// Só criar conta se o usuário existir X
 // Mostrar campos de acordo com o cargo da conta
 // Mostar informações da conta na tela
 // Mostrar extrato
