deposit, withdraw and investment implemented

--- a/toDo.txt
+++ b/toDo.txt
@@ -1,5 +1,4 @@
 -------------O QUE AINDA PRECISA SER FEITO----------------
 
 // Mostrar extrato
-// Realizar saques e depósitos
-// Realizar investimentos
+// Simular rendimento
