statement implemented and screen appearing on the side of the screen fixed

--- a/toDo.txt
+++ b/toDo.txt
@@ -1,4 +1,4 @@
 -------------O QUE AINDA PRECISA SER FEITO----------------
 
-// Mostrar extrato
+// Tela de contas e usuários existentes para o gerente
 // Simular rendimento
